@@ -1,5 +1,5 @@
 /*
- * $Id: vmysql.c,v 1.9 2003-11-02 11:53:28 jheesemann Exp $
+ * $Id: vmysql.c,v 1.10 2003-11-15 06:55:44 mbowe Exp $
  * Copyright (C) 1999-2003 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -1256,7 +1256,7 @@ void vcreate_lastauth_table()
     }
     return;
 }
-#endif
+#endif /* ENABLE_AUTH_LOGGING */
 
 #ifdef VALIAS
 char *valias_select( char *alias, char *domain )
